# otp

./: .dir-locals.el  .editorconfig  .elp.toml  .formatter.exs  .gitignore  .gitpod.yml  .mailmap  .ort.yml  .semgrepignore  .travis.yml  AUTHORS  CONTRIBUTING.md  EPLICENCE  IMPLEMENTATION_SUMMARY.md  INSTALL-CROSS.md  INSTALL-WIN32.md  INSTALL.md  Makefile.in  OTP_VERSION  README  README.bootstrap  README.dtrace.md  README.md  README.md.txt  README.systemtap.md  README.win32  README_PKCS12.md  REUSE.toml  SECURITY.md  SVERKER  TAR.include  TEST  TESTING  aclocal.m4  all_runs.html  check_links.exs  compile.sh  configure  configure.in  configure.src  (+34 more)
lib/: .gitignore  Makefile  configure.in  configure.in.src
lib/appmon/: AUTHORS  BUGS_AND_FIXES  Makefile  info  vsn.mk
lib/appmon/priv/: Makefile  appmon.tool  appmon_help.txt  info_frames.html  main_frame.html  start_info.html
lib/appmon/src/: Makefile  appmon.app.src  appmon.appup.src  appmon.erl  appmon_a.erl  appmon_dg.erl  appmon_dg.hrl  appmon_info.erl  appmon_lb.erl  appmon_place.erl  appmon_txt.erl  appmon_web.erl  process_info.erl
lib/asn1/: AUTHORS  Makefile  info  notes.html  vsn.mk
lib/asn1/c_src/: Makefile  Makefile.in  asn1_erl_driver.c  asn1_erl_nif.c
lib/asn1/doc/: Makefile  docs.exs  notes.md
lib/asn1/examples/: InfClass3.asn  Int.py  P-Record.asn  RANAPextract1.asn  ecn_internaldoc.txt  encode_decode_formats.txt  recordnames.txt  test_driver.erl
lib/common_test/: AUTHORS  Makefile  configure  configure.ac  configure.in  info  install.sh.in  vsn.mk
lib/compiler/: AUTHORS  Makefile  info  vsn.mk
lib/cosEvent/: AUTHORS  Makefile  info  vsn.mk
lib/cosEventDomain/: Makefile  info  vsn.mk
lib/cosFileTransfer/: Makefile  info  vsn.mk
lib/cosNotification/: Makefile  info  vsn.mk
lib/cosProperty/: Makefile  info  vsn.mk
lib/cosTime/: AUTHORS  Makefile  info  vsn.mk
lib/cosTransactions/: AUTHORS  Makefile  info  vsn.mk
lib/crypto/: AUTHORS  Makefile  configure  configure.ac  configure.in  info  vsn.mk
lib/debugger/: AUTHORS  Makefile  info  vsn.mk
lib/dialyzer/: AUTHORS  Makefile  README  RELEASE_NOTES  info  vsn.mk
lib/diameter/: .gitignore  AUTHORS  Makefile  Makefile.in  TAR.exclude  aclocal.m4  configure.in  info  subdirs.mk  vsn.mk
lib/docbuilder/: AUTHORS  Makefile  info  vsn.mk
lib/dtrace/: Makefile  vsn.mk
lib/edoc/: .gitignore  Makefile  info  vsn.mk
lib/eldap/: .gitignore  AUTHORS  LICENSE  Makefile  README  info  vsn.mk
lib/epmd/: Makefile  README.md  info  vsn.mk
lib/erl_docgen/: Makefile  info  vsn.mk
lib/erl_interface/: AUTHORS  Makefile  aclocal.m4  config.h.in  configure  configure.ac  configure.in  erl_ei.pc.in  info  vsn.mk
lib/et/: AUTHORS  Makefile  info  subdirs.mk  vsn.mk
lib/eunit/: AUTHORS  Makefile  info  vsn.mk
lib/ftp/: AUTHORS  Makefile  info  vsn.mk
lib/gs/: AUTHORS  Makefile  configure.in  prebuild.skip  vsn.mk
lib/hipe/: Makefile  TODO  info  native.mk  vsn.mk
lib/ic/: AUTHORS  Makefile  info  prebuild.skip  vsn.mk
lib/inets/: AUTHORS  Makefile  info  vsn.mk
lib/inviso/: AUTHORS  Makefile  info  vsn.mk
lib/jinterface/: .classpath  .gitignore  .project  AUTHORS  Makefile  info  prebuild.keep  vsn.mk
lib/kernel/: AUTHORS  Makefile  info  vsn.mk
lib/megaco/: .gitignore  AUTHORS  Makefile  configure  configure.ac  configure.in  info  prebuild.skip  subdirs.mk  vsn.mk
lib/mnesia/: AUTHORS  Makefile  info  vsn.mk
lib/observer/: AUTHORS  Makefile  info  vsn.mk
lib/odbc/: AUTHORS  Makefile  aclocal.m4  configure  configure.ac  configure.in  info  subdirs.mk  vsn.mk
lib/orber/: AUTHORS  Makefile  info  prebuild.skip  vsn.mk
lib/os_mon/: AUTHORS  Makefile  info  vsn.mk
lib/ose/: Makefile  info  vsn.mk
lib/otp_mibs/: AUTHORS  Makefile  info  vsn.mk
lib/parsetools/: AUTHORS  Makefile  info  vsn.mk
lib/percept/: AUTHORS  Makefile  info  vsn.mk
lib/pman/: AUTHORS  Makefile  info  vsn.mk
lib/public_key/: .gitignore  AUTHORS  Makefile  info  vsn.mk
lib/reltool/: AUTHORS  Makefile  info  vsn.mk
lib/runtime_tools/: AUTHORS  Makefile  info  vsn.mk
lib/sasl/: AUTHORS  Makefile  info  vsn.mk
lib/snmp/: .gitignore  AUTHORS  Makefile  configure  configure.ac  configure.in  info  subdirs.mk  vsn.mk
lib/ssh/: AUTHORS  Makefile  info  prebuild.skip  subdirs.mk  vsn.mk
lib/ssl/: AUTHORS  Makefile  client.pem  inet_proxy_dist.erl  info  prebuild.skip  proxy_server.erl  server.pem  vsn.mk
lib/stdlib/: AUTHORS  Makefile  info  vsn.mk
lib/syntax_tools/: AUTHORS  Makefile  info  syntax_tools.pub  vsn.mk
lib/test_server/: AUTHORS  Makefile  README  info  prebuild.skip  vsn.mk
lib/tftp/: AUTHORS  Makefile  info  vsn.mk
lib/toolbar/: AUTHORS  Makefile  info  vsn.mk
lib/tools/: AUTHORS  Makefile  info  vsn.mk
lib/tv/: AUTHORS  Makefile  info  vsn.mk
lib/typer/: Makefile  RELEASE_NOTES  info  vsn.mk
lib/webtool/: AUTHORS  Makefile  info  vsn.mk
lib/wx/: .dir-locals.el  .editorconfig  .gitignore  AUTHORS  Makefile  Notes  README  TODO  aclocal.m4  config.mk.in  configure  configure.ac  configure.in  info  install.es  prebuild.skip  vendor.info  vsn.mk  wxwin-2.9.m4  wxwin-nothrow.m4
lib/xmerl/: AUTHORS  Makefile  info  notes.html  vsn.mk  xmerl.pub
make/: app_targets.mk  check_ex_doc  configure  configure.ac  configure.in  cross_check_erl  dep.mk  doc.mk  emd2exml.in  ex_doc.exs  ex_doc.sha1sum  ex_doc.sha256sum  ex_doc_link  ex_doc_vsn  ex_doc_wrapper  ex_doc_wrapper.erl  ex_doc_wrapper.in  fakefop  fixup_development_runtime_dependencies  fixup_doc_links.sh  gdb_tools_link  gdb_tools_vsn  get_ex_doc_formats_no_epub.sh  install_bin  install_dir_data.sh.in  lazy_configure.mk  make_emakefile  make_emakefile.in  markdown_to_man.escript  openvex.table  ose_lm.mk.in  otp.mk.in  otp_ded.mk.in  otp_default_release_path.mk  otp_release_targets.mk  otp_released_app.mk  otp_subdir.mk  otp_version_tickets  otp_version_tickets_in_merge  output.mk.in  (+7 more)
make/autoconf/: otp.m4  vendor.info  win32.config.cache.static  win64-arm64.config.cache.static  win64-x64_arm64.config.cache.static  win64.config.cache.static
(+17145 files in other folders)
